# http-server

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.c.83481380D8D80EC3.idx  main.c.CB65D05C25FB21D1.idx  requests.c.2F89891FFFE522C2.idx  requests.h.282094E5F21E7AEA.idx  server.c.CB36699097064DAA.idx  server.c.DCD4951913BC2B73.idx  server.h.1FAB285C58026A60.idx  server.h.936A6D011679AE6C.idx
src/: main.c  requests.c  server.c
src/include/: requests.h  server.h
